Arrumei as margins, desenvolvi o menu.
Falta apenas resolver o direcionamento dos links do mobile que ainda não está funcionando

--- a/inspiration4.html
+++ b/inspiration4.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <header class="z-index2">
-        <a href="/"><img src="images/inspirationLogo.png" alt="Logo da inspiration4" class="logo"></a>
+        <a href="/" ><img style="max-width: 300px" src="images/inspirationLogo.png" alt="Logo da inspiration4" class="logo"></a>
         <nav>
             <div class="mobileMenu">
                 <div class="line line1"></div>
