--- a/inspiration4.html
+++ b/inspiration4.html
@@ -271,7 +271,7 @@
                     </a>
                 </li>
             </ul>
-            <p id="copyright">@ 2023 made by rafaelcarlosoficial</p>
+            <p id="copyright">@ 2023 feito por rafaelcarlosoficial</p>
         </div>
     </footer>
     
